--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
         - 'v*.*.*'
+  pull_request:
 
 jobs:
   build:
@@ -17,6 +18,12 @@ jobs:
       - name: Build 
         run: |
           ./dist.sh
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: dist/*
+          if-no-files-found: error
 
       - name: Release
         uses: softprops/action-gh-release@v1
